Fixed the donate section image alignment and font sizes on smaller screens of titles

--- a/Frontend/Host/src/components/Donate/styles.css
+++ b/Frontend/Host/src/components/Donate/styles.css
@@ -156,8 +156,9 @@ span {
     text-align: center;
   }
 
-  .donate-image > img {
-    width: 80%;
+  .donate-image img {
+    object-fit: cover;
+    width: 100%;
   }
 
   .donate-text {
@@ -166,7 +167,7 @@ span {
   }
 
   .donate-text > h2 {
-    font-size: 48px;
+    font-size: 32px;
   }
 
   .donate-text > p {
