--- a/Frontend/Host/src/components/Features/styles.css
+++ b/Frontend/Host/src/components/Features/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
 
 .features {
   padding: 95px 0px 70px;
@@ -19,7 +19,7 @@
   margin: 0 0 77px;
 }
 .features-container-texts > h2 {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: "Playfair Display", sans-serif;
   font-size: 64px;
   line-height: 64px;
   color: #ffd012;
@@ -41,8 +41,7 @@
 }
 /* Phones */
 @media only screen and (max-width: 479px) {
-  .features{
-    
+  .features {
   }
   .features-news {
     flex-direction: column;
@@ -51,6 +50,9 @@
 }
 /* Tablets */
 @media only screen and (max-width: 767px) {
+  .features-container-texts > h2 {
+    font-size: 32px;
+  }
 }
 /* Large Screen */
 @media only screen and (min-width: 768px) {
